# haskell-modbus

./: .gitignore  LICENSE  Modbus.hs  README.md  examples.hs  haskell-modbus.cabal  network_example.hs  serial_example.hs  stack.yaml
Data/: Modbus.hs  ModbusRtu.hs
Data/Digest/: CRC16.hs
test/Data/: ModbusSpec.hs
