name:                haskell-modbus
version:             0.3.2
synopsis:            A cereal-based parser for the Modbus protocol
description:         A cereal-based parser for the Modbus protocol
homepage:            http://www.github.com/jhickner/haskell-modbus
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner
maintainer:          jhickner@gmail.com
category:            Data, Parsing, Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Modbus, Data.ModbusRtu, Data.Digest.CRC16
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       base >= 4 && < 5,
                       array >= 0.4,
                       bitwise == 0.1.*,
                       bytestring >= 0.9,
                       cereal >=0.3

test-suite spec 
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      test
  Ghc-Options:         -Wall
  Main-Is:             Spec.hs
  Other-Modules:       Data.ModbusSpec
  Build-Depends:        base
                      , hspec
                      , haskell-modbus
                      , cereal 
                      , bytestring
                      , array
                      , derive
                      , QuickCheck
                      , quickcheck-instances
